force-app/main/default/objects/Customer__c/fields/Customer_full_name__c.field-meta.xml
<CustomField>
    <fullName>Customer_full_name__c</fullName>
    <formula>Name &amp; &quot; &quot; &amp; Customer_surname__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer full name</label>
    <type>Text</type>
</CustomField>