force-app/main/default/objects/Customer__c/fields/Customer_surname__c.field-meta.xml
<CustomField>
    <fullName>Customer_surname__c</fullName>
    <description>Surname of the customer</description>
    <label>Customer Surname</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>