force-app/main/default/objects/Customer__c/fields/Firstname__c.field-meta.xml
<CustomField>
    <fullName>Firstname__c</fullName>
    <formula>If( CONTAINS(Name, &quot; &quot;), LEFT( Name ,FIND(&quot; &quot;, Name )), Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firstname</label>
    <type>Text</type>
</CustomField>