force-app/main/default/objects/Customer__c/fields/Surname__c.field-meta.xml
<CustomField>
    <fullName>Surname__c</fullName>
    <formula>If( CONTAINS(Name, &quot; &quot;), MID( Name , FIND(&quot; &quot;, Name ), LEN(Name )), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Surname</label>
    <type>Text</type>
</CustomField>